<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">

    <TextView
        android:id="@+id/question_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/teal_200"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/true_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_view" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/false_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_view" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        app:layout_constraintVertical_bias="0.819"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/streakView"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streak"
        app:layout_constraintBottom_toTopOf="@+id/question_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/streak_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/streak_val"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/question_view"
        app:layout_constraintStart_toStartOf="@+id/streakView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/scoreView"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="@+id/streakView"
        app:layout_constraintStart_toStartOf="@+id/streakView"
        app:layout_constraintTop_toBottomOf="@+id/streakView" />

    <TextView
        android:id="@+id/score_val"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:text="@string/score_val"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/question_view"
        app:layout_constraintEnd_toEndOf="@+id/streak_val"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/scoreView"
        app:layout_constraintTop_toBottomOf="@+id/streak_val"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/qId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/streakView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.819"
        app:layout_constraintTop_toBottomOf="@+id/true_button" />

</androidx.constraintlayout.widget.ConstraintLayout>